# project-k-analytics-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_analytics_schema.py
config/: scheduling.yaml
config/detectors/: aging_deterioration.yaml  ccc_stretch.yaml  concentration_risk.yaml  liquidity_shortfall.yaml  payable_cliff.yaml  sales_decline.yaml
config/insight_templates/en/: cash_flow.yaml  payables.yaml  receivables.yaml  working_capital.yaml
config/loan_policies/: _base.yaml  manufacturing.yaml  trading.yaml
config/verticals/: _base.yaml  agri.yaml  manufacturing.yaml  services.yaml  trading.yaml
src/analytics_engine/: __init__.py  cli.py
src/analytics_engine/api/: app.py  deps.py  routes_admin.py  routes_alerts.py  routes_health.py  routes_insights.py  routes_loan.py  routes_metrics.py  schemas.py
src/analytics_engine/core/: amount.py  config.py  exceptions.py  registry.py  types.py
src/analytics_engine/db/: engine.py  models.py  public_models.py  session.py
src/analytics_engine/detectors/: __init__.py  aging.py  base.py  ccc_stretch.py  concentration.py  liquidity.py  payable_cliff.py  sales_decline.py
src/analytics_engine/insights/: engine.py  (+1 more)
tests/: conftest.py  test_amount.py  test_config.py
tests/test_api/: test_health.py
tests/test_detectors/: test_all_detectors.py
tests/test_insights/: test_insight_engine.py
tests/test_loan/: test_rules.py
tests/test_metrics/: conftest.py  test_all_metrics.py
(+21 files in other folders)
